# universal_robot

./: .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  MOVEIT_README  README.md  melodic.ignored  stack.xml
universal_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
universal_robots/: CHANGELOG.rst  CMakeLists.txt  package.xml
ur5_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
ur5_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur5.srdf
ur5_moveit_config/launch/: .demo.launch.swp  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch  ur5_moveit_controller_manager.launch.xml  ur5_moveit_planning_execution.launch  ur5_robot_moveit_controller_manager.launch.xml  warehouse.launch
ur5_moveit_config/tests/: moveit_planning_execution.xml
ur_bringup/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  ur10.launch  ur10_joint_limited.launch  ur5.launch  ur5_joint_limited.launch  ur_common.launch
ur_bringup/launch/: ur10.launch  ur10_bringup.launch  ur10_bringup_compatible.launch  ur10_bringup_joint_limited.launch  ur10_ros_control.launch  ur10e_bringup.launch  ur3_bringup.launch  ur3_bringup_joint_limited.launch  ur3_ros_control.launch  ur3e_bringup.launch  ur5.launch  ur5_bringup.launch  ur5_bringup_compatible.launch  ur5_bringup_joint_limited.launch  ur5_ros_control.launch  ur5e_bringup.launch  ur_common.launch
ur_bringup/tests/: roslaunch_test.xml
ur_controllers/: CMakeLists.txt  package.xml  ur_controller_plugins.xml
ur_controllers/launch/: load_default_controllers.launch  test_forward_controllers.launch  trajectory_ctrl_constraints.yaml
ur_controllers/src/: ur_forward_cmd_controllers.cpp  ur_joint_trajectory_controller.cpp  ur_state_controllers.cpp  ur_switch_mode_controllers.cpp
ur_controllers/test/: test_fwd_ctrl.py  test_traj_ctrl.py
ur_ctrl_client/: CMakeLists.txt  package.xml  ur_test_controller_plugins.xml
ur_ctrl_client/launch/: ur_ctrl_client.launch  ur_ctrl_client_manager.launch
ur_ctrl_client/msg/: JointTrajPtFull32.msg  JointTrajPtFull64.msg
ur_ctrl_client/param/: joint_names.yaml
ur_ctrl_client/src/: jtp_msg_forwarder.cpp  ur_ctrl_client.cpp  ur_ctrl_man.cpp  ur_msg_handlers.cpp  ur_robot_hw.cpp
ur_ctrl_server/: CMakeLists.txt  SConscript  SConstruct  package.xml
ur_ctrl_server/config/: CMakeLists.txt  UR-C-APIConfig.cmake.in
ur_ctrl_server/scripts/: link_simple_message.sh
ur_ctrl_server/src/: run_controller.cpp  ur_config_cmd_handler.cpp  ur_controller_iface.cpp  ur_ctrl_server.cpp  ur_hardware_controller.cpp  ur_joint_cmd_handler.cpp  ur_test_controller.cpp  ur_test_server.cpp
ur_description/: CHANGELOG.rst  CMakeLists.txt  README.md  manifest.xml  package.xml  urdf_data_flow.drawio
ur_description/config/: ur10_default.yaml  ur10_joint_limited.yaml  ur3_default.yaml  ur3_joint_limited.yaml  ur5_default.yaml  ur5_joint_limited.yaml
ur_description/launch/: load.launch  load_ur.launch  load_ur10.launch  load_ur10e.launch  load_ur16e.launch  load_ur20.launch  load_ur3.launch  load_ur30.launch  load_ur3e.launch  load_ur5.launch  load_ur5e.launch  test.launch  test_ur16e.launch  test_ur3.launch  test_ur3e.launch  test_ur5.launch  ur10_upload.launch  ur10e_upload.launch  ur16e_upload.launch  ur3_upload.launch  ur3e_upload.launch  ur5_upload.launch  ur5e_upload.launch  ur_common.launch  view.launch  view_ur10.launch  view_ur10e.launch  view_ur16e.launch  view_ur20.launch  view_ur3.launch  view_ur30.launch  view_ur3e.launch  view_ur5.launch  view_ur5e.launch
ur_description/template/: load_urx.launch  test_urx.launch  test_urx_gazebo.launch  urx.sh  urx.xacro  urx_bringup.launch  urx_macro.xacro  view_urx.launch
ur_description/tests/: roslaunch_test_ur10.xml  roslaunch_test_ur10e.xml  roslaunch_test_ur20.xml  roslaunch_test_ur30.xml  roslaunch_test_ur5e.xml
ur_description/urdf/: common.gazebo.xacro  common.xacro  gazebo.urdf.xacro  macro.xacro  materials.urdf.xacro  ur.common.xacro  ur.gazebo.xacro  ur.geometry.xacro  ur.transmission.xacro  ur.xacro  ur10.gazebo.xacro  ur10.transmission.xacro  ur10.urdf.xacro  ur10.xacro  ur10_joint_limited.urdf.xacro  ur10_joint_limited_robot.urdf  ur10_joint_limited_robot.urdf.xacro  ur10_limited.urdf.xacro  ur10_limited_robot.urdf.xacro  ur10_robot.urdf  ur10_robot.urdf.xacro  ur10e.xacro  ur10e_robot.urdf.xacro  ur16e.xacro  ur20.xacro  ur3.urdf.xacro  ur3.xacro  ur30.xacro  ur3_joint_limited_robot.urdf.xacro  ur3_robot.urdf.xacro  ur3e.xacro  ur3e_robot.urdf.xacro  ur5.gazebo.xacro  ur5.transmission.xacro  ur5.urdf.xacro  ur5.xacro  ur5_joint_limited.urdf.xacro  ur5_joint_limited_robot.urdf  ur5_joint_limited_robot.urdf.xacro  ur5_limited.urdf.xacro  (+8 more)
ur_driver/: CHANGELOG.rst  CMakeLists.txt  Copy of prog  cartesian_trajectory_player  deserialize.py  driver.py  manifest.xml  package.xml  prog  prog_reset  repetitive_trajectory.txt  repetitive_trajectory_2.txt  repetitive_trajectory_3.txt  repetitive_trajectory_4.txt  setup.py  static_trajectory.txt  test_io.py  test_move.py  trajectory.txt  trajectory_player  trajectory_recorder
ur_driver/cfg/: URDriver.cfg
ur_e_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
ur_e_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
ur_gazebo/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
ur_kinematics/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  setup.py  ur_moveit_plugins.xml
ur_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+755 files in other folders)
