<package format="2">
  <name>universal_robot</name>
  <version>1.2.5</version>
  <description>
      Drivers, description, and utilities for Universal Robot Arms.
  </description>

  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/universal_robot</url>

  <author email="sedwards@swri.org">Shaun Edwards</author>
  <author>Stuart Glaser</author>
  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>
  <author>Wim Meeussen</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>universal_robots</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
