<package>
  <name>universal_robots</name>
  <version>1.2.1</version>
  <description>
      Drivers, description, and utilities for Universal Robot Arms.
  </description>

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/universal_robot</url>

  <author email="sedwards@swri.org">Shaun Edwards</author>
  <author>Stuart Glaser</author>
  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>
  <author>Wim Meeussen</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>universal_robot</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
