<?xml version="1.0"?>
<package>
  <name>ur_bringup</name>
  <version>1.1.11</version>
  <description>The ur_bringup package</description>

  <author>Wim Meeussen</author>
  <author email="sedwards@swri.org">Shaun Edwards</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ur_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>ur_description</run_depend>
  <run_depend>ur_driver</run_depend>

  <export>
  </export>
</package>
