<?xml version="1.0"?>
<package format="2">
  <name>ur_bringup</name>
  <version>1.2.7</version>
  <description>The ur_bringup package</description>

  <author>Wim Meeussen</author>
  <author>Shaun Edwards</author>
  <author>Felix Messmer</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ur_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
