<?xml version="1.0"?>
<package>
  <name>ur_description</name>
  <version>1.1.9</version>
  <description>
      URDF description for Universal UR5/10 robot arms
  </description>

  <author>Wim Meeussen</author>
  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>
  <author>Mathias Ludtke</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ur_description</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
