<?xml version="1.0"?>
<package>
  <name>ur_driver</name>
  <version>1.1.11</version>
  <description>
      Driver for the UR5/10 arm based on the Polyscope control scheme.
  </description>

  <author>Stuart Glaser</author>
  <author email="sedwards@swri.org">Shaun Edwards</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ur_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>ur_msgs</run_depend>
  <run_depend>python-lxml</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>
