<?xml version="1.0"?>
<package format="2">
  <name>ur_driver</name>
  <version>1.2.5</version>
  <description>
      Driver for the UR5/10 arm based on the Polyscope control scheme.
  </description>

  <author>Stuart Glaser</author>
  <author>Shaun Edwards</author>
  <author>Felix Messmer</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ur_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>ur_msgs</exec_depend>
  <exec_depend>python-lxml</exec_depend>
</package>
